--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 header {
   display: flex;
   background: rgb(255, 248, 243);
-  background-image: url('../my-projects-02/images/header_bg.png');
+  background-image: url('../my-projects-02/images/header_bg.pnggit');
 }
 .header-developer-img {
   height: 570px;
