--- a/style.css
+++ b/style.css
@@ -9,7 +9,10 @@
 header {
   display: flex;
   background: rgb(255, 248, 243);
-  background-image: url('../my-projects-02/images/header_bg.pnggit');
+  background-image: url('./images/header_bg.png');
+  background-repeat: no-repeat;
+  background-position: bottom right;
+  background-size: 620px;
 }
 .header-developer-img {
   height: 570px;
@@ -20,7 +23,7 @@ nav {
 }
 .nav-contan {
   display: flex;
-  gap: 490px;
+  gap: 520px;
 }
 ul {
   display: flex;
@@ -74,7 +77,7 @@ ul {
 .header-contan-dittle {
   color: rgba(117, 117, 117, 0.894);
   font-family: "Open Sans";
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 400;
   text-align: left;
   margin-bottom: 15px;
@@ -105,6 +108,6 @@ ul {
 }
 .header-contan-img {
 position: relative;
-top: 30px;
+top: 31px;
 left: 205px;
 }
